# ITViec-Job-Assitant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  command.txt  pyproject.toml  test.py
backend/: api.py  build_faiss.py
data/: itviec_jobs.csv
data/crawl/: crawl.py
docs/: intro.md
frontend/: index.html
